fix jinja template and readme

--- a/index.html.jinja
+++ b/index.html.jinja
@@ -44,7 +44,7 @@
 
 
 	<!-- Leaflet data -->
-    <script src="{{ DATA_FILE }}" type="text/javascript"></script>
+    <script src="{{ data_file }}" type="text/javascript"></script>
     
     <style>
         html,
@@ -91,7 +91,7 @@
 
     <!-- Category buttons -->
     <div class="ctrl-btns">
-        <h3>{{ PAGE_TITLE }}</h3>
+        <h3>{{ page_title }}</h3>
     </div>
     <!-- Main map -->
     <div id="map" class="leaflet-container"></div>
